Migrate to JDK 25 and optimize interactive rendering